[gd_scene load_steps=16 format=2]

[ext_resource path="res://themes/MainMenu.tres" type="Theme" id=1]
[ext_resource path="res://scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://img/MainBG.jpg" type="Texture" id=3]
[ext_resource path="res://img/MoonwardsLogo2018-1200.png" type="Texture" id=4]
[ext_resource path="res://fonts/djv_mono.tres" type="DynamicFont" id=5]
[ext_resource path="res://fonts/djv_bold_italic.tres" type="DynamicFont" id=6]
[ext_resource path="res://fonts/djv_italic.tres" type="DynamicFont" id=7]
[ext_resource path="res://fonts/djv_bold.tres" type="DynamicFont" id=8]
[ext_resource path="res://fonts/djv_sans.tres" type="DynamicFont" id=9]
[ext_resource path="res://assets/UI/Menu/User_Settings.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/UI/Menu/Options.tscn" type="PackedScene" id=11]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.654902, 0.129412, 0.129412, 1 )
albedo_texture = SubResource( 2 )
roughness = 0.0

[sub_resource type="CanvasItemMaterial" id=4]
next_pass = SubResource( 3 )
blend_mode = 1

[node name="Spatial" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 7

[node name="ui" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Logo" type="TextureRect" parent="ui"]
margin_right = 1024.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="MainUI" type="HBoxContainer" parent="ui"]
editor/display_folded = true
margin_top = 204.0
margin_right = 1024.0
margin_bottom = 700.0
size_flags_vertical = 3
alignment = 1

[node name="Separator4" type="Panel" parent="ui/MainUI"]
margin_left = 370.0
margin_right = 420.0
margin_bottom = 496.0
rect_min_size = Vector2( 50, 50 )
custom_styles/panel = SubResource( 1 )

[node name="ButtonsContainer" type="VBoxContainer" parent="ui/MainUI"]
margin_left = 424.0
margin_right = 599.0
margin_bottom = 496.0
rect_min_size = Vector2( 175, 0 )
custom_constants/separation = 10
alignment = 1

[node name="Instructions" type="Button" parent="ui/MainUI/ButtonsContainer"]
margin_top = 103.0
margin_right = 175.0
margin_bottom = 143.0
rect_min_size = Vector2( 0, 40 )
text = "Instructions"

[node name="Run" type="Button" parent="ui/MainUI/ButtonsContainer"]
margin_top = 153.0
margin_right = 175.0
margin_bottom = 193.0
rect_min_size = Vector2( 0, 40 )
action_mode = 0
text = "Run"

[node name="Options" type="Button" parent="ui/MainUI/ButtonsContainer"]
margin_top = 203.0
margin_right = 175.0
margin_bottom = 243.0
rect_min_size = Vector2( 0, 40 )
text = "Options"

[node name="Display" type="Button" parent="ui/MainUI/ButtonsContainer"]
margin_top = 253.0
margin_right = 175.0
margin_bottom = 293.0
rect_min_size = Vector2( 0, 40 )
disabled = true
text = "Display"

[node name="RunNet" type="Button" parent="ui/MainUI/ButtonsContainer"]
margin_top = 303.0
margin_right = 175.0
margin_bottom = 343.0
rect_min_size = Vector2( 0, 40 )
action_mode = 0
text = "Run Multiplayer"

[node name="CfgPlayer" type="Button" parent="ui/MainUI/ButtonsContainer"]
margin_top = 353.0
margin_right = 175.0
margin_bottom = 393.0
rect_min_size = Vector2( 0, 40 )
action_mode = 0
text = "Change player settings"

[node name="Separator3" type="Panel" parent="ui/MainUI"]
margin_left = 603.0
margin_right = 653.0
margin_bottom = 496.0
rect_min_size = Vector2( 50, 50 )
custom_styles/panel = SubResource( 1 )

[node name="InstructionsContainer" type="VBoxContainer" parent="ui/MainUI"]
editor/display_folded = true
visible = false
margin_left = 287.0
margin_right = 984.0
margin_bottom = 456.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Separator" type="Panel" parent="ui/MainUI/InstructionsContainer"]
margin_right = 697.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )

[node name="pHelp" type="Panel" parent="ui/MainUI/InstructionsContainer"]
self_modulate = Color( 0, 0, 0, 0.564706 )
margin_top = 29.0
margin_right = 697.0
margin_bottom = 427.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="ui/MainUI/InstructionsContainer/pHelp"]
self_modulate = Color( 0.929412, 0.862745, 0.862745, 1 )
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/mono_font = ExtResource( 5 )
custom_fonts/bold_italics_font = ExtResource( 6 )
custom_fonts/italics_font = ExtResource( 7 )
custom_fonts/bold_font = ExtResource( 8 )
custom_fonts/normal_font = ExtResource( 9 )
bbcode_enabled = true
bbcode_text = "[b]To move use your keyboard and mouse[/b]
        [b]W[/b] or [i]Up arrow[/i] - Forward
        [b]S[/b] or [i]Down arrow[/i] - Backward
        [b]A[/b] or [i]Left arrow[/i] - Sideways left
        [b]D[/b] or [i]Right arrow[/i] - Sideways right
        [b]Q[/b] or [i]Page Up[/i] - Move Up
        [b]E[/b] or [i]Page Down[/i] - Move Down
		
[b]Scroll wheel[/b]
         - scroll up - move faster
         - scroll down - move slower

[b]In game[/b]
Press Esc to see a menu with options for your mouse, general speed, and others.
If the app is running slowly, try reducing the setting for Far. This limits how far away the camera can see.

Press Esc again to close the menu.
"
text = "To move use your keyboard and mouse
        W or Up arrow - Forward
        S or Down arrow - Backward
        A or Left arrow - Sideways left
        D or Right arrow - Sideways right
        Q or Page Up - Move Up
        E or Page Down - Move Down
		
Scroll wheel
         - scroll up - move faster
         - scroll down - move slower

In game
Press Esc to see a menu with options for your mouse, general speed, and others.
If the app is running slowly, try reducing the setting for Far. This limits how far away the camera can see.

Press Esc again to close the menu.
"

[node name="Separator2" type="Panel" parent="ui/MainUI/InstructionsContainer"]
margin_top = 431.0
margin_right = 697.0
margin_bottom = 456.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )

[node name="PlayerSettings" parent="ui" instance=ExtResource( 10 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 498.0
margin_right = 1024.0
margin_bottom = 700.0

[node name="ProgressBar" type="ProgressBar" parent="ui"]
visible = false
margin_top = 642.0
margin_right = 984.0
margin_bottom = 660.0

[node name="Control" parent="ui" instance=ExtResource( 11 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 498.0
margin_right = 1024.0
margin_bottom = 700.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="load_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Options" type="Node" parent="."]

[node name="NoCamera" type="Node" parent="Options"]

[connection signal="pressed" from="ui/MainUI/ButtonsContainer/Instructions" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="ui/MainUI/ButtonsContainer/Run" to="." method="_on_Run_pressed"]
[connection signal="pressed" from="ui/MainUI/ButtonsContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="ui/MainUI/ButtonsContainer/RunNet" to="." method="_on_RunNet_pressed"]
[connection signal="pressed" from="ui/MainUI/ButtonsContainer/CfgPlayer" to="." method="_on_CfgPlayer_pressed"]
[connection signal="timeout" from="load_timer" to="." method="_on_Timer_timeout"]
